@@ -1,3 +1,5 @@
+2021/04/06
+• Bot will react :nice: instead of saying "Nice!" if nice react exists.
 2021/02/23
 • Updated default message.
 2021/02/18
